Fixed footer bug and widened faqs on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -641,9 +641,9 @@ header,
 .faq {
     height: 100vh;
     width: 100vw;
-    max-height: 1200px;
     background-color: #2196F3;
-    // overflow: hidden;
+    display: inline-table;
+
 
 
     h2 {
@@ -731,12 +731,20 @@ a{
     color: black;
 }
 
+input:checked ~ .tab-content{
+  max-height: 30em;
+}
+
 footer {
     height: 80px;
     background-color: white;
     color: black;
     text-align: center;
     border-top: 1px solid #F3F3F3;
+}
+
+.clear-float{
+  clear: both;
 }
 
 .btt{
@@ -1254,6 +1262,10 @@ footer {
 
     input:checked ~ .tab-content{
       max-height: 30em;
+    }
+
+    footer{
+      border-top: none;
     }
 
 }
